--- a/action.yml
+++ b/action.yml
@@ -13,11 +13,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Checkout action
-      uses: actions/checkout@v4
     - name: Run the coverage comparison
       shell: bash
-      run: ./entrypoint.sh ${{ inputs.coverage-tool }} ${{ inputs.compare-branch }}
+      run: "${{ github.action_path }}/entrypoint.sh" ${{ inputs.coverage-tool }} ${{ inputs.compare-branch }}
     - name: Post coverage results as a PR comment
       if: github.event_name == 'pull_request'
       uses: thollander/actions-comment-pull-request@v1
